styles for title fixed and albums with empty covers skipped

--- a/src/App.sass
+++ b/src/App.sass
@@ -23,36 +23,39 @@
     &:hover
         transform: scale(1.1)
 
-        .album-cover
-            transform: scale(1.02)
+        .album-cover,
+        .album-title
+            transform: scale(1)
 
     .album-cover
         position: relative
         width: 200px
         height: 350px
-        transform: rotateY(40deg) scale(.9) translateX(-22%);
+        transform: rotateY(40deg) scale(.9) translateX(-23%)
         transition: all .2s
 
 
         img
-            position: absolute
+            position: absolutes
             width: 100%
             height: 100%
 
     .album-title
-        position: relative
+        display: flex
+        justify-content: center;
         width: 50px
         height: 100%
         background: #000
         transform: rotateY(-40deg)
+        transition: all .2s
     
         span
-            position: absolute
-            transform: rotate(90deg)
-            top: 50%
             color: #fff
             font-size: 20px
             white-space: nowrap
+            writing-mode: vertical-rl
+            text-orientation: mixed
+            text-align: center;
 
 
 
